<resources>
    <string name="app_name">Taxi360</string>
    <string name="text_booking">Normal</string>
    <string name="text_voice">Voice</string>
    <string name="text_quick">Quick</string>
    <string name="text_emergency">Emergency</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_from_location">From Location</string>
    <string name="input_to_location">To Location</string>
    <string name="text_from_location">From Location</string>
    <string name="text_to_location">To Location</string>
    <string name="text_for_others">For my Family/Friends</string>
    <string name="text_vehicle_type">Vehicle Type</string>
    <string name="text_booking_date">Date</string>
    <string name="text_booking_time">h:mm AM/PM</string>
    <string name="input_text_comments">Comments</string>
    <string name="text_book_ride">Book Ride</string>
    <string name="text_other_user">Book for Other User</string>
    <string name="text_name">Name</string>
    <string name="text_mobile">Mobile Number</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok_button">OK</string>
    <string-array name="vehicle_types">
        <item>Select Vehicle Type</item>
        <item>Mini</item>
        <item>Micro</item>
        <item>SUV</item>
        <item>Sedan</item>
    </string-array>
</resources>
