<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/horizontal_spacing"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_spacing"
        android:gravity="center"
        android:text="@string/text_other_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#444"></TableRow>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_spacing">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name"
            android:inputType="textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_spacing">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_dialog_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_mobile"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/input_dialog_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal_spacing"
            android:text="@string/text_cancel" />

        <Button
            android:id="@+id/input_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal_spacing"
            android:text="@string/text_ok" />

    </LinearLayout>

</LinearLayout>